made changes to address errors in code base